Correction d'un bug sur le timestamp

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        </div>
        <div id="diaporama">
          <div class="title">
-          <h3 id="titleDiaporama">Voici le titre de la diapo</h3>
+          <h3 id="titleDiaporama">Informations Velib - Lyon</h3>
           <p id="down"><i class="pointer fas fa-times-circle"></i></p>
          </div>
 
